<resources>
    <string name="app_name" translatable="false">WatsNext</string>
    <string name="empty_state_message">There are no events in the list. To add an event, click the Add Event button at the bottom of the screen</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="delete_all_events">Delete All Events</string>
    <string name="event_reminder_icon_content_description">Event Reminder Icon</string>
    <string name="event_type_other">Other</string>
    <string name="event_type_appointment">Appointment</string>
    <string name="event_type_meeting">Meeting</string>
    <string name="event_type_social">Social Event</string>
    <string name="event_details_header">Event Details</string>
    <string name="event_text_hint">Event text</string>
    <string name="spinner_hint">Event Type</string>
    <string name="edit_event">Edit Event</string>
    <string name="add_event">Add Event</string>

    <string name="expand_more_path">M16.59,8.59L12,13.17 7.41,8.59 6,10l6,6 6,-6z</string>
    <string name="expand_less_path">M12,8l-6,6 1.41,1.41L12,10.83l4.59,4.58L18,14z</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="month_format_jan">Jan</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="save_location">Save Location</string>
    <string name="repeater_header">Repeat</string>
    <string name="content_description_next_month">Next Month</string>
    <string name="content_description_next_day">Next Day</string>
    <string name="content_description_next_year">Next Year</string>
    <string name="content_description_previous_day">Previous Day</string>
    <string name="content_description_previous_year">Previous Year</string>
    <string name="content_description_previous_month">Previous Month</string>
    <string name="content_description_next_minute">Next Minute</string>
    <string name="content_description_next_hour">Next Hour</string>
    <string name="content_description_next_am_pm">Next Am/Pm</string>
    <string name="content_description_previous_hour">Previous Hour</string>
    <string name="content_description_previous_am_pm">Previous Am/Pm</string>
    <string name="content_description_previous_minute">Previous Minute</string>
    <string name="reminder_type">Reminder: </string>
    <string name="no_reminder">No reminder</string>
    <string name="reminder">Reminder</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="content_description_launch_google_maps">Launch Google Maps</string>
    <string name="content_description_open_calendar">Open Calendar</string>
    <string name="content_description_increase_reminder_days_before_event">Increase reminder days before event</string>
    <string name="content_description_increase_reminder_minutes_before_event">Increase reminder minutes before event</string>
    <string name="content_description_increase_reminder_hours_before_event">Increase reminder hours before event</string>
    <string name="content_description_decrease_reminder_days_before_event">Decrease reminder days before event</string>
    <string name="content_description_decrease_reminder_minutes_before_event">Decrease reminder minutes before event</string>
    <string name="content_description_decrease_reminder_hours_before_event">Decrease reminder hours before event</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="mins">Min</string>
    <string name="reminder_text_before_the_event">before the event</string>
    <string name="stop_alarm">Stop Alarm</string>

    <string name="notification_channel_name">WatsNext</string>
    <string name="notification_channel_description">notification reminders</string>
    <string name="appwidget_text">Upcoming Events</string>
    <string name="add_widget">Add widget</string>
    <string name="no_more_events">No more upcoming events</string>
    <string name="Event_date_in_past">Event date and time are in the past. Please select a future date for the event</string>
    <string name="event">Event</string>
    <string name="no_upcoming_events">No upcoming events</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_event_confirmation_message">You are about to delete this event from the database. Do you wish to proceed?</string>
    <string name="delete_all_events_confirmation_title">Delete All Events</string>
    <string name="delete_all_events_confirmation_message">You are about to delete ALL the events from the database. Do you wish to proceed?</string>
    <string name="show_all_event_types">Show all event types</string>
    <string name="repeater_monday">M</string>
    <string name="repeater_tuesday">T</string>
    <string name="repeater_wednesday">W</string>
    <string name="repeater_thursday">T</string>
    <string name="repeater_friday">F</string>
    <string name="repeater_saturday">S</string>
    <string name="repeater_sunday">S</string>
    <string name="no_internet_message">A network connection is required to access this feature</string>
    <string name="repeat_every_month">repeatEveryMonth</string>
    <string name="monthly">Monthly</string>

</resources>
