<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tv_time_picker_hour"
        style="@style/PickerItemStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_time_picker_minute"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="HH" />

    <TextView
        android:id="@+id/tv_time_picker_minute"
        style="@style/PickerItemStyle"
        android:layout_marginEnd="@dimen/time_picker_space_between_items"
        android:layout_marginStart="@dimen/time_picker_space_between_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_time_picker_ampm"
        app:layout_constraintStart_toEndOf="@+id/tv_time_picker_hour"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="MM" />

    <TextView
        android:id="@+id/tv_time_picker_ampm"
        style="@style/PickerItemStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_time_picker_minute"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="am/pm" />

    <ImageView
        android:id="@+id/iv_minute_plus_button"
        style="@style/PickerArrowStyle"
        app:layout_constraintBottom_toTopOf="@+id/tv_time_picker_minute"
        app:layout_constraintEnd_toEndOf="@+id/tv_time_picker_minute"
        app:layout_constraintStart_toStartOf="@+id/tv_time_picker_minute"
        app:srcCompat="@android:drawable/arrow_up_float"
        android:contentDescription="@string/content_description_next_minute" />

    <ImageView
        android:id="@+id/iv_hour_plus_button"
        style="@style/PickerArrowStyle"
        app:layout_constraintBottom_toTopOf="@+id/tv_time_picker_hour"
        app:layout_constraintEnd_toEndOf="@+id/tv_time_picker_hour"
        app:layout_constraintStart_toStartOf="@+id/tv_time_picker_hour"
        app:srcCompat="@android:drawable/arrow_up_float"
        android:contentDescription="@string/content_description_next_hour" />

    <ImageView
        android:id="@+id/iv_ampm_plus_button"
        style="@style/PickerArrowStyle"
        app:layout_constraintBottom_toTopOf="@+id/tv_time_picker_ampm"
        app:layout_constraintEnd_toEndOf="@+id/tv_time_picker_ampm"
        app:layout_constraintStart_toStartOf="@+id/tv_time_picker_ampm"
        app:srcCompat="@android:drawable/arrow_up_float"
        android:contentDescription="@string/content_description_next_am_pm" />

    <ImageView
        android:id="@+id/iv_hour_minus_button"
        style="@style/PickerArrowStyle"
        app:layout_constraintEnd_toEndOf="@+id/tv_time_picker_hour"
        app:layout_constraintStart_toStartOf="@+id/tv_time_picker_hour"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_picker_hour"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:contentDescription="@string/content_description_previous_hour" />

    <ImageView
        android:id="@+id/iv_ampm_minus_button"
        style="@style/PickerArrowStyle"
        app:layout_constraintEnd_toEndOf="@+id/tv_time_picker_ampm"
        app:layout_constraintStart_toStartOf="@+id/tv_time_picker_ampm"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_picker_ampm"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:contentDescription="@string/content_description_previous_am_pm" />

    <ImageView
        android:id="@+id/iv_minute_minus_button"
        style="@style/PickerArrowStyle"
        app:layout_constraintEnd_toEndOf="@+id/tv_time_picker_minute"
        app:layout_constraintStart_toStartOf="@+id/tv_time_picker_minute"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_picker_minute"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:contentDescription="@string/content_description_previous_minute" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/time_picker_text_bottom_margin"
        android:textColor="@android:color/white"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="@+id/iv_minute_plus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/iv_minute_minus_button"
        app:layout_constraintEnd_toStartOf="@+id/tv_time_picker_minute"
        app:layout_constraintStart_toEndOf="@+id/tv_time_picker_hour"
        app:layout_constraintTop_toBottomOf="@+id/iv_minute_plus_button" />
</android.support.constraint.ConstraintLayout>