<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/materialbackground"
    android:fitsSystemWindows="false"
    tools:context="com.example.android.watsnext.Activities.AddEventActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/statusBarHeight">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appBarHeight"
            android:background="@android:color/transparent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.Toolbar
                android:id="@+id/add_event_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="false"
                app:titleTextColor="@android:color/white" />
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/tv_event_details_header"
            style="@style/AddEventHeaderTextViewStyle"
            android:text="@string/event_details_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <View
            android:id="@+id/view_event_details_header_separator"
            style="@style/AddEventHeaderSeparatorViewStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_details_header" />

        <include
            android:id="@+id/event_type_drop_down_layout"
            layout="@layout/layout_event_types"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_event_details_header_separator" />

        <EditText
            android:id="@+id/et_event_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/event_text_hint"
            android:inputType="textCapSentences"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_details_header" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_save_event"
            style="@style/FloatingActionButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_done" />

        <!-- TODO: Animate this layout to slide down when drop down menu is activated-->
        <include
            android:id="@+id/date_picker"
            style="@style/PickerLayoutStyle"
            layout="@layout/layout_date_picker"
            app:layout_constraintEnd_toEndOf="@+id/event_type_drop_down_layout"
            app:layout_constraintStart_toStartOf="@+id/event_type_drop_down_layout"
            app:layout_constraintTop_toBottomOf="@+id/event_type_drop_down_layout" />

        <include
            android:id="@+id/time_picker"
            style="@style/PickerLayoutStyle"
            layout="@layout/layout_time_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_event_text" />

        <ImageView
            android:id="@+id/iv_pick_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_open_calendar"
            app:layout_constraintBottom_toBottomOf="@+id/date_picker"
            app:layout_constraintEnd_toStartOf="@+id/time_picker"
            app:layout_constraintStart_toEndOf="@+id/date_picker"
            app:layout_constraintTop_toTopOf="@+id/date_picker"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <EditText
            android:id="@+id/et_event_location"
            android:layout_width="@dimen/event_location_EditText_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/event_location_end_margin"
            android:layout_marginRight="@dimen/event_location_end_margin"
            android:hint="@string/location"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_picker" />

        <ImageView
            android:id="@+id/iv_map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_launch_google_maps"
            app:layout_constraintBottom_toBottomOf="@+id/et_event_location"
            app:layout_constraintEnd_toStartOf="@+id/et_event_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_event_location"
            app:srcCompat="@android:drawable/ic_dialog_map" />

        <include
            android:id="@+id/repeater_layout"
            layout="@layout/layout_repeater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_event_location" />

        <TextView
            android:id="@+id/tv_event_reminder_header"
            style="@style/AddEventHeaderTextViewStyle"
            android:text="@string/reminder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeater_layout" />

        <View
            android:id="@+id/view_event_reminder_header_separator"
            style="@style/AddEventHeaderSeparatorViewStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_reminder_header" />

        <RadioGroup
            android:id="@+id/rg_reminder_options"
            style="@style/EventReminderRadioGroupStyle"
            app:layout_constraintBottom_toTopOf="@+id/fab_save_event"
            app:layout_constraintEnd_toStartOf="@+id/reminder_time_picker_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_event_reminder_header_separator">

            <RadioButton
                android:id="@+id/rb_noReminder"
                style="@style/EventReminderRadioButtonStyle"
                android:checked="true"
                android:text="@string/no_reminder" />

            <RadioButton
                android:id="@+id/rb_notification"
                style="@style/EventReminderRadioButtonStyle"
                android:text="@string/notification" />

            <RadioButton
                android:id="@+id/rb_alarm"
                style="@style/EventReminderRadioButtonStyle"
                android:text="@string/alarm" />
        </RadioGroup>

        <include
            android:id="@+id/reminder_time_picker_layout"
            layout="@layout/layout_reminder_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/fab_save_event"
            app:layout_constraintEnd_toStartOf="@+id/tv_reminder_text"
            app:layout_constraintStart_toEndOf="@+id/rg_reminder_options"
            app:layout_constraintTop_toBottomOf="@id/view_event_reminder_header_separator" />

        <TextView
            android:id="@+id/tv_reminder_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:text="@string/reminder_text_before_the_event"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/reminder_time_picker_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/reminder_time_picker_layout"
            app:layout_constraintTop_toTopOf="@+id/reminder_time_picker_layout"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp" />


    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>